Fix mask cards vertically overflowing
This would happen if the contents of the card was taller than the
viewport height (because we'd arbitraliy-but-explicitly limited it
to that), which is often the case now with the redesigned
expanded state.

--- a/frontend/src/components/dashboard/aliases/Alias.module.scss
+++ b/frontend/src/components/dashboard/aliases/Alias.module.scss
@@ -381,7 +381,7 @@ $trackerRemovalIndicatorWidth: 20px;
 
   .is-expanded & {
     // An arbitrary high value that allows it to expand to its full height:
-    max-height: 100vh;
+    max-height: 1000vh;
     border-color: $color-light-gray-20;
     padding: $spacing-sm 0;
     visibility: visible;
